--- a/index.html
+++ b/index.html
@@ -1,68 +1,19 @@
 <!DOCTYPE html>
 
-<!--
-This is an HTML document. It contains information about how elements in the website
-are arranged. In other words, it describes the layout of a website.
-
-I can't wait to see the resumes you put together!
-
-Cameron Pittman, Udacity Course Developer
--->
-
-<!--
-The <head> of a website generally links to important resources the page will
-need to load. You'll see a lot of <link>s to CSS files for styles and
-<scripts> for JavaScript files to build interactions.
--->
 <html>
 <head>
-  <!-- This tells the browser how to read the document. -->
-  <meta charset="utf-8">
-
-  <!-- Tells the browser what the title of this page should be. -->
-  <title>Resume</title>
-
-  <!-- Load the page styles. -->
-  <link href="css/style.css" rel="stylesheet">
-
-  <!--
-  jQuery is a common JavaScript library for reading and making changes to the
-  Document Object Model (DOM). The DOM is a tree that contains information
-  about what is actually visible on a website.
-
-  While HTML is a static document, the browser converts HTML to the
-  DOM and the DOM can change. In fact, JavaScript's power comes from
-  its ability to manipulate the DOM, which is essentially a JavaScript
-  object. When JavaScript makes something interesting happen on a
-  website, it's likely the action happened because JavaScript changed
-  the DOM. jQuery is fast and easy to use, but it doesn't do anything
-  you can't accomplish with vanilla (regular) JavaScript.
-  -->
-  <script src="js/jQuery.js"></script>
-
-  <!-- More on helper.js in the class -->
-  <script src="js/helper.js"></script>
-
-  <!--
-  Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
-  -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
-
-  <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <title>Resume</title>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/jQuery.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAyu5qvgqspS76Nn3Rx0BamspdArfc5ubc"></script>
+    <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <div id="main">
-   <!-- Hello world!  --> <!-- You'll be deleting this line in the course -->
-
-    <!--
-    Everything from here to the <script> tag below is the skeleton of your
-    website. Your code will add information to each of the sections of the
-    resume below. You can pretty easily figure out what each section will
-    display by looking at the id or at what's written between the <h2> tags.
-    -->
-    <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box">
-      </ul>
+     <div id="header" class="center-content clear-fix">
+     <ul id="topContacts" class="flex-box"></ul>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
@@ -84,68 +35,115 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     </div>
   </div>
 
-  <!--
-  The next line tells the browser where to download the JavaScript file you'll be
-  writing. In resumeBuilder.js, you'll be writing code that builds the resume
-  dynamically when this website, index.html, is opened.
-  -->
   <script src="js/resumeBuilder.js"></script>
-
-
-  <!--
-  These scripts are written in JavaScript. You'll be breaking them down as part of
-  a quiz. Essentially, the next few lines are checking to see if you have not
-  changed each section of the resume. If you have not made any changes to a section
-  of the resume, then that part of the resume does not show up. More on this in the
-  course.
-  -->
-
   <script>
-    // Notice how all of a sudden there's JavaScript inside this HTML
-    // document? You can write JavaScript between <script> tags. At the end of your
-    // JavaScript, don't forget the closing script tag with the slash (/).
 
+      //BIO
 
-    // Also, this is a JavaScript style comment. You can comment in JavaScript with:
-
-    //   two slashes for all following characters on a single line, or
-
-    /*
-        an opening and closing set of slash asterisks for block comments.
-    */
-
-
-    //$("#main").append("and Victor");
-
-
-
-      if(bio.skills.length > 0) {
-        var FormattedName = HTMLheaderName.replace("%data%", bio.name);
-        var FormattedRole = HTMLheaderRole.replace("%data%", bio.role);
-        $("#header").append(FormattedName);
-        $("#header").append(FormattedRole);
-        $("#header").append(bio.email + " " + bio.phone);
-        $("#header").append(HTMLskillsStart);
-        var FormattedSkills = HTMLskills.replace("%data%", bio.skills[0]);
-        $("#header").append(FormattedSkills);
-        FormattedSkills = HTMLskills.replace("%data%", bio.skills[1]);
-        $("#header").append(FormattedSkills);
-        FormattedSkills = HTMLskills.replace("%data%", bio.skills[2]);
-        $("#header").append(FormattedSkills);
-        //for (var item in bio.skills){
-        //    var skills_stack = [];
-        //    skills_stack.push(bio.skills[item])};
-        //$("#skills").append(skills_stack);
-    //} else {
-    //    console.log("Object is eampty"); // Object is empty (Would return true in this example)
-    //}
-        for (var item in work.work_place){
-            $("#workExperience").append(HTMLworkStart);
-            var FormatedEmployer = HTMLworkEmployer.replace("%data%", work.work_place[item].company);
-            var FormatedTitle = HTMLworkTitle.replace("%data%", work.work_place[item].title);
-            $(".work-entry:last").append(FormatedEmployer + FormatedTitle);
-        };
+      function intName(name){
+          var temp = name.trim().split(" ");
+          var out = temp[0] + " " + temp[1].toUpperCase();
+          return(out);
       };
+
+
+      function displayWork(){
+          $("#mapDiv").append(googleMap);
+
+          if (bio.name.length>0){
+              var FormatedPictureBlock = HTMLbioPic.replace("%data%", bio.picture_url);
+              var FormattedName = HTMLheaderName.replace("%data%", intName(bio.name));
+              var FormattedRole = HTMLheaderRole.replace("%data%", bio.role);
+              var FormattedMobile = HTMLmobile.replace("%data%", bio.phone);
+              var FormattedEmail = HTMLemail.replace("%data%", bio.email);
+              var FormatedLinkedIn = HTMLlinkedin.replace("%data%", bio.linkedin);
+              var Formatedgithub = HTMLgithub.replace("%data%", bio.github);
+              var FormatedLocation = HTMLlocation.replace("%data%", bio.current_location)
+
+              $("#header").prepend(FormattedName + FormattedRole);
+              $("#topContacts").append(FormattedMobile + FormattedEmail + FormatedLinkedIn + FormatedLocation + Formatedgithub);
+              $("#header").append( FormatedPictureBlock);
+
+          };
+
+          if(bio.skills.length > 0) {
+            $("#header").append(HTMLskillsStart);
+            for (var item in bio.skills){
+                var FormattedSkills = HTMLskills.replace("%data%", bio.skills[item]);
+                $("#header").append(FormattedSkills);
+            };
+
+
+          };
+
+          //WORK EXPERIENCE
+
+          if (work.work_place.length > 0){
+              for (var item in work.work_place){
+                  $("#workExperience").append(HTMLworkStart);
+                  var FormatedEmployer = HTMLworkEmployer.replace("%data%", work.work_place[item].company);
+                  var FormatedTitle = HTMLworkTitle.replace("%data%", work.work_place[item].title);
+                  var from_to = work.work_place[item].from + " - " + work.work_place[item].to;
+                  var FormatedFromTo = HTMLworkDates.replace("%data%", from_to);
+                  var FormatedLocation = HTMLworkLocation.replace("%data%", work.work_place[item].location);
+                  var FormatedDescription = HTMLworkDescription.replace("%data%", work.work_place[item].experience);
+                  $(".work-entry:last").append(FormatedEmployer + FormatedTitle + FormatedFromTo + FormatedLocation + FormatedDescription);
+
+
+            };
+
+          };
+
+
+          //Projects
+          projects.display = function(){
+              if (projects.project.length > 0){
+                  for (var item in projects.project){
+                      $("#projects").append(HTMLprojectStart);
+                      var FormatedProjectTitle = HTMLprojectTitle.replace("%data%", projects.project[item].title);
+                      $("#project-entry:last").append(FormatedProjectTitle);
+                      var FormatedProjectDates = HTMLprojectDates.replace("%data%", projects.project[item].dates);
+                      $("#project-entry:last").append(FormatedProjectDates);
+                      var FormatedProjectDescription = HTMLprojectDescription.replace("%data%", projects.project[item].description);
+                      $("#project-entry:last").append(FormatedProjectDescription);
+                      for (var image in projects.project[item].images){
+                        var FormatedProjectImage = HTMLprojectImage.replace("%data%", projects.project[item].images[image]);
+                        $("#project-entry:last").append(FormatedProjectImage);
+                      };
+                  };
+
+              };
+          };
+          projects.display();
+          //Education
+          if (education.shools.length > 0){
+              for (item in education.shools){
+                  $("#education").append(HTMLschoolStart);
+                  var FormatedEducationName = HTMLschoolName.replace("%data%", education.shools[item].name);
+                  var FormatedEducationDegree = HTMLschoolDegree.replace("%data%", education.shools[item].degree);
+                  var FormatedEducationDates = HTMLschoolDates.replace("%data%", education.shools[item].dates);
+                  var FormatedEducationLocation = HTMLschoolLocation.replace("%data%", education.shools[item].city);
+                  $("#education").append(FormatedEducationName + FormatedEducationDegree + FormatedEducationDates + FormatedEducationLocation);
+                  for (major_item in education.shools[item].major){
+                    var FormatedEducationMajor = HTMLschoolMajor.replace("%data%", education.shools[item].major[major_item]);
+                    $("#education").append(FormatedEducationMajor);
+                    };
+              };
+          };
+
+
+     };
+
+    displayWork();
+
+
+      //var HTMLschoolMajor = '<em><br>Major: %data%</em>';
+
+
+
+         //        "major" : ["Processing, Automation"]
+
+      //Where I've Lived and Worked
 
     //thoughts = thoughts.replace("awesome", "cool")
     //$("#main").append(thoughts);
