--- a/index.html
+++ b/index.html
@@ -36,6 +36,143 @@
   </div>
 
   <script src="js/resumeBuilder.js"></script>
+  <script>
 
+      //BIO
+
+      function intName(name){
+          var temp = name.trim().split(" ");
+          var out = temp[0] + " " + temp[1].toUpperCase();
+          return(out);
+      };
+
+
+      function displayWork(){
+          $("#mapDiv").append(googleMap);
+
+          if (bio.name.length>0){
+              var FormatedPictureBlock = HTMLbioPic.replace("%data%", bio.picture_url);
+              var FormattedName = HTMLheaderName.replace("%data%", intName(bio.name));
+              var FormattedRole = HTMLheaderRole.replace("%data%", bio.role);
+              var FormattedMobile = HTMLmobile.replace("%data%", bio.phone);
+              var FormattedEmail = HTMLemail.replace("%data%", bio.email);
+              var FormatedLinkedIn = HTMLlinkedin.replace("%data%", bio.linkedin);
+              var Formatedgithub = HTMLgithub.replace("%data%", bio.github);
+              var FormatedLocation = HTMLlocation.replace("%data%", bio.current_location)
+
+              $("#header").prepend(FormattedName + FormattedRole);
+              $("#topContacts").append(FormattedMobile + FormattedEmail + FormatedLinkedIn + FormatedLocation + Formatedgithub);
+              $("#header").append( FormatedPictureBlock);
+
+          };
+
+          if(bio.skills.length > 0) {
+            $("#header").append(HTMLskillsStart);
+            for (var item in bio.skills){
+                var FormattedSkills = HTMLskills.replace("%data%", bio.skills[item]);
+                $("#header").append(FormattedSkills);
+            };
+
+
+          };
+
+          //WORK EXPERIENCE
+
+          if (work.work_place.length > 0){
+              for (var item in work.work_place){
+                  $("#workExperience").append(HTMLworkStart);
+                  var FormatedEmployer = HTMLworkEmployer.replace("%data%", work.work_place[item].company);
+                  var FormatedTitle = HTMLworkTitle.replace("%data%", work.work_place[item].title);
+                  var from_to = work.work_place[item].from + " - " + work.work_place[item].to;
+                  var FormatedFromTo = HTMLworkDates.replace("%data%", from_to);
+                  var FormatedLocation = HTMLworkLocation.replace("%data%", work.work_place[item].location);
+                  var FormatedDescription = HTMLworkDescription.replace("%data%", work.work_place[item].experience);
+                  $(".work-entry:last").append(FormatedEmployer + FormatedTitle + FormatedFromTo + FormatedLocation + FormatedDescription);
+
+
+            };
+
+          };
+
+
+          //Projects
+          projects.display = function(){
+              if (projects.project.length > 0){
+                  $("#projects").append(HTMLprojectStart);
+                  for (var item in projects.project){
+
+                      var FormatedProjectTitle = HTMLprojectTitle.replace("%data%", projects.project[item].title);
+                      $(".project-entry:last").append(FormatedProjectTitle);
+                      var FormatedProjectDates = HTMLprojectDates.replace("%data%", projects.project[item].dates);
+                      $(".project-entry:last").append(FormatedProjectDates);
+                      var FormatedProjectDescription = HTMLprojectDescription.replace("%data%", projects.project[item].description);
+                      $(".project-entry:last").append(FormatedProjectDescription);
+                      for (var image in projects.project[item].images){
+                        var FormatedProjectImage = HTMLprojectImage.replace("%data%", projects.project[item].images[image]);
+                        $(".project-entry:last").append(FormatedProjectImage);
+                      };
+                      // $("#projects").append(FormatedProjectTitle + FormatedProjectDates + FormatedProjectDescription +
+                      //               FormatedProjectImage);
+                  };
+
+              };
+          };
+          projects.display();
+          //Education
+          if (education.shools.length > 0){
+            $("#education").append(HTMLschoolStart);
+              for (item in education.shools){
+                  console.log(education.shools[item].name);
+                  var FormatedEducationName = HTMLschoolName.replace("%data%", education.shools[item].name);
+                  var FormatedEducationDegree = HTMLschoolDegree.replace("%data%", education.shools[item].degree);
+                  var FormatedEducationDates = HTMLschoolDates.replace("%data%", education.shools[item].dates);
+                  var FormatedEducationLocation = HTMLschoolLocation.replace("%data%", education.shools[item].city);
+                  $(".education-entry:last").append(FormatedEducationName + FormatedEducationDegree + FormatedEducationDates + FormatedEducationLocation);
+                  for (major_item in education.shools[item].major){
+                    var FormatedEducationMajor = HTMLschoolMajor.replace("%data%", education.shools[item].major[major_item]);
+                    $(".education-entry:last").append(FormatedEducationMajor);
+                    };
+              };
+          };
+
+
+     };
+
+    displayWork();
+
+
+      //var HTMLschoolMajor = '<em><br>Major: %data%</em>';
+
+
+
+         //        "major" : ["Processing, Automation"]
+
+      //Where I've Lived and Worked
+
+    //thoughts = thoughts.replace("awesome", "cool")
+    //$("#main").append(thoughts);
+
+    if(document.getElementsByClassName('flex-item').length === 0) {
+      document.getElementById('topContacts').style.display = 'none';
+    }
+    if(document.getElementsByTagName('h1').length === 0) {
+      document.getElementById('header').style.display = 'none';
+    }
+    if(document.getElementsByClassName('work-entry').length === 0) {
+      document.getElementById('workExperience').style.display = 'none';
+    }
+    if(document.getElementsByClassName('project-entry').length === 0) {
+      document.getElementById('projects').style.display = 'none';
+    }
+    if(document.getElementsByClassName('education-entry').length === 0) {
+      document.getElementById('education').style.display = 'none';
+    }
+    if(document.getElementsByClassName('flex-item').length === 0) {
+      document.getElementById('lets-connect').style.display = 'none';
+    }
+    if(document.getElementById('map') === null) {
+      document.getElementById('mapDiv').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
